--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Ensure browsers are installed
         run: python -m playwright install --with-deps
       - name: Run your tests
-        run: pytest --tracing=retain-on-failure
+        run: pytest --tracing=on -s
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
