--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+attrs==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 greenlet==3.1.1
+idna==3.10
 iniconfig==2.0.0
+Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+MarkupSafe==3.0.2
 packaging==24.2
 playwright==1.50.0
 pluggy==1.5.0
 pyee==12.1.1
 pytest==8.3.4
 pytest-base-url==2.1.0
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 pytest-playwright==0.7.0
+pytest-reportlog==0.4.0
 python-slugify==8.0.4
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.22.3
 ruff==0.9.7
-
-
+text-unidecode==1.3
+typing_extensions==4.12.2
+urllib3==2.3.0
