path to logs in gh workflow

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,4 +31,4 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: playwright-traces
-          path: test-results/
+          path: logs/
